<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_simple_calculator"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_simple_calculator" />
        <item
            android:id="@+id/nav_scientific_calculator"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_scientific_calculator" />
        <item
            android:id="@+id/nav_measurement_converter"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_measurement_converter" />
    </group>
</menu>