<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midle_light_black"
    android:padding="@dimen/paddin_display"
    tools:context=".ui.SimpleCalculatorFragment">

    <RelativeLayout
        android:id="@+id/rl_display"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_display"
        android:background="@drawable/custom_shape_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_expression"
            android:layout_width="@dimen/default_dimen"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_result"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_display"
            android:layout_marginTop="@dimen/margin_display"
            android:layout_marginEnd="@dimen/margin_display"
            android:gravity="right"
            android:textColor="@color/midle_black"
            android:textSize="@dimen/text_result_size"
            tools:text="555" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="@dimen/default_dimen"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_display"
            android:layout_marginEnd="@dimen/margin_display"
            android:gravity="right"
            android:visibility="invisible"
            android:textColor="@color/midle_black"
            android:textSize="@dimen/text_result_size"
            tools:text="555" />


    </RelativeLayout>

    <!--1ºcolum-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_ac"
        android:text="@string/button_ac"
        android:textColor="@color/midle_light_black"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_seven"
        app:layout_constraintEnd_toStartOf="@id/btn_percentage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_display" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_percentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_operator"
        android:text="@string/button_percentage"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_percent_size"
        app:layout_constraintBottom_toTopOf="@id/btn_height"
        app:layout_constraintEnd_toStartOf="@id/btn_divide"
        app:layout_constraintStart_toEndOf="@id/btn_ac"
        app:layout_constraintTop_toBottomOf="@id/rl_display" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_operator"
        android:gravity="center"
        android:text="@string/button_divide"
        android:textSize="@dimen/button_equal_size"
        android:textColor="@color/text_button_number"
        app:layout_constraintBottom_toTopOf="@id/btn_nine"
        app:layout_constraintEnd_toStartOf="@id/btn_multiply"
        app:layout_constraintStart_toEndOf="@id/btn_percentage"
        app:layout_constraintTop_toBottomOf="@id/rl_display" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_operator"
        android:text="@string/button_multiply"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_decrease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_divide"
        app:layout_constraintTop_toBottomOf="@id/rl_display" />

    <!--2ºcolum-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:onClick="onDigit"
        android:text="@string/button_seven"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_four"
        app:layout_constraintEnd_toStartOf="@id/btn_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ac" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_height"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_height"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_five"
        app:layout_constraintEnd_toStartOf="@id/btn_nine"
        app:layout_constraintStart_toEndOf="@id/btn_seven"
        app:layout_constraintTop_toBottomOf="@id/btn_percentage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_nine"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_six"
        app:layout_constraintEnd_toStartOf="@id/btn_decrease"
        app:layout_constraintStart_toEndOf="@id/btn_height"
        app:layout_constraintTop_toBottomOf="@id/btn_divide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_decrease"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_operator"
        android:text="@string/button_decrease"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_equal_size"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_nine"
        app:layout_constraintTop_toBottomOf="@id/btn_multiply" />

    <!--3ºcolum-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_four"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_one"
        app:layout_constraintEnd_toStartOf="@id/btn_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_seven" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_five"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_two"
        app:layout_constraintEnd_toStartOf="@id/btn_six"
        app:layout_constraintStart_toEndOf="@id/btn_four"
        app:layout_constraintTop_toBottomOf="@id/btn_height" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_six"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_three"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/btn_five"
        app:layout_constraintTop_toBottomOf="@id/btn_nine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_ac"
        android:text="@string/button_add"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_equal_size"
        app:layout_constraintBottom_toBottomOf="@id/btn_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_six"
        app:layout_constraintTop_toBottomOf="@id/btn_decrease" />

    <!--4ºcolum-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_one"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_zero"
        app:layout_constraintEnd_toStartOf="@id/btn_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_four" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_two"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btn_three"
        app:layout_constraintStart_toEndOf="@id/btn_one"
        app:layout_constraintTop_toBottomOf="@id/btn_five" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_three"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@id/btn_back_space"
        app:layout_constraintEnd_toStartOf="@id/btn_invisible"
        app:layout_constraintStart_toEndOf="@id/btn_two"
        app:layout_constraintTop_toBottomOf="@id/btn_six" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="1"
        android:textColor="@color/light_blue"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_three"
        app:layout_constraintTop_toBottomOf="@id/btn_add" />

    <!--5ªcolum-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_zero"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_one" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/button_dot"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_equal_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_back_space"
        app:layout_constraintStart_toEndOf="@id/btn_zero"
        app:layout_constraintTop_toBottomOf="@id/btn_two" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_backspace"
        android:gravity="center_vertical"
        android:paddingStart="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_equal"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_three" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button_result"
        android:text="@string/button_equal"
        android:textColor="@color/text_button_number"
        android:textSize="@dimen/button_equal_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back_space"
        app:layout_constraintTop_toBottomOf="@id/btn_add" />


</androidx.constraintlayout.widget.ConstraintLayout>